--- a/ape/9.tex
+++ b/ape/9.tex
@@ -2,9 +2,37 @@
 
 \paragraph{1. } Donnez une autre représentation planaire du graphe suivant où la face spécifiée devient la face extérieure. 
 
+\begin{center}
+\includegraphics[scale=.4]{ape9_ex1_1.jpg} 
+\end{center}
+
+\textit{Solution}
+
+\begin{center}
+\includegraphics[scale=.4]{ape9_ex1_2.jpg} 
+\end{center}
+
 \paragraph{2. }Un graphe planaire peut-il être représenté sur un cylindre bi-infini sans que ses arêtes ne se croisent? La réciproque est-elle vraie? Et pour un graphe sur un tore? 
 
 \paragraph{3. }Les graphes suivants sont-ils planaires?
+
+\begin{tabular}{lcccr}
+a)
+\includegraphics[scale=.4]{ape9_ex3_a_1.jpg}
+& $\qquad$ & b) \includegraphics[scale=.4]{ape9_ex3_b_1.jpg}
+& $\qquad$ & c) \includegraphics[scale=.4]{ape9_ex3_c_1.jpg} \\
+\end{tabular} 
+
+\bigskip 
+
+
+\textit{Solution}
+
+\begin{tabular}{lcr}
+a) Oui
+\includegraphics[scale=.4]{ape9_ex3_a_2.jpg}
+& $\qquad$ & b) Oui \includegraphics[scale=.4]{ape9_ex3_b_2.jpg}
+\end{tabular}
 
 \paragraph{4. }Supposez qu'un graphe connexe planaire a 6 sommets, chacun de degré 4/ En combien de régions le plan est-il divisé par une représentation planaire de ce graphe?
 
