--- a/ape/9.tex
+++ b/ape/9.tex
@@ -14,6 +14,21 @@
 
 \paragraph{2. }Un graphe planaire peut-il être représenté sur un cylindre bi-infini sans que ses arêtes ne se croisent? La réciproque est-elle vraie? Et pour un graphe sur un tore? 
 
+\textit{Solution}\\
+
+Pour le cylindre bi-infini : 
+\begin{itemize}
+\item plan $\longrightarrow$ cylindre : oui, il suffit de découper un carré contenant le graphe et de joindre les 2 cotés opposés
+\item cylindre $\longrightarrow$ plan : oui, il suffit de couper sur la longueur du cylindre et de "dérouler" le cylindre. \\
+\end{itemize}
+
+Pour le tore : 
+\begin{itemize}
+\item plan $\longrightarrow$ tore : idem plan $\longrightarrow$ cylindre
+\item tore $\longrightarrow$ plan : non, car on peut dessiner le graphe $K_5$ sur un tore sans que ses arêtes ne se croisent (l'une des arêtes fait le tour du tore).
+\end{itemize}
+
+
 \paragraph{3. }Les graphes suivants sont-ils planaires?
 
 \begin{tabular}{lcccr}
@@ -31,17 +46,71 @@ a)
 \begin{tabular}{lcr}
 a) Oui
 \includegraphics[scale=.4]{ape9_ex3_a_2.jpg}
-& $\qquad$ & b) Oui \includegraphics[scale=.4]{ape9_ex3_b_2.jpg}
+& $\qquad$ & b) Oui \includegraphics[scale=.4]{ape9_ex3_b_2.jpg} \\
 \end{tabular}
 
-\paragraph{4. }Supposez qu'un graphe connexe planaire a 6 sommets, chacun de degré 4/ En combien de régions le plan est-il divisé par une représentation planaire de ce graphe?
 
-\paragraph{5. }Le complémentaire $\bar{G}$ d'un graphe $G = (V,E)$ de $n$ sommets est donné par $\bar{G} = (V, E(K_n)-E)$. Montrez que si $n \geq 11$, au moins un des deux graphes $G$ ou $\bar{G}$ n'est pas planaire.
+c) Non. On observe que le graphe possède une clique de 4 noeuds (a,b,g,f). On observe aussi que le noeud c est adjacent à b,g et f. On prouve ensuite qu'il existe un chemin entre c et a qui ne passe pas par b, g ou f : le chemin c-d-e-a. Cela signifie qu'il existe un sous-graphe $K_5$ "caché" dans le graphe. Or, \\
 
-\paragraph{6. }Sous quelle condition est-il possible d'ajouter une arête à un graphe planaire en conservant la planarité? Déduisez=en le nombre total d'arêtes qu'il est possible d'ajouter à un graphe planaire de $n$ sommets et $m$ arêtes tout en conservant la planarité.
+\textbf{Théorème 9.1.4 (Kuratowski)}.\textit{ Un graphe est non planaire si et seulement s’il contient comme sous-graphe $K_5$ ou $K_{3,3}$ ou une subdivision de ceux-ci.}
 
-\paragraph{7. }Soit un graphe $G$ 3-régulier tel que tout sommet est incident à une face de degré 4, une face de degré 6 et une face de degré 8. Sans dessiner $G$, déterminez le nombre de faces de $G$.
+
+\paragraph{4. }Supposez qu'un graphe connexe planaire a 6 sommets, chacun de degré 4. En combien de régions le plan est-il divisé par une représentation planaire de ce graphe?\\
+
+\textit{Solution}\\
+
+Soit $n = 6$, $e = \frac{6 \cdot 4}{2}$. Par la formule d'Euler $ n - e + f = 2$, on a : $f = 2 - 6 + 12 = 8$.
+
+\paragraph{5. }Le complémentaire $\bar{G}$ d'un graphe $G = (V,E)$ de $n$ sommets est donné par $\bar{G} = (V, E(K_n)-E)$. Montrez que si $n \geq 11$, au moins un des deux graphes $G$ ou $\bar{G}$ n'est pas planaire. \\
+
+\textit{Solution}\\
+
+Pour tout graphe planaire simple à $n$ sommets, le nombre d'arêtes $e$ est défini par la borne supérieure  $e \leq 3n - 6$. \\
+On sait que $|E(K_{n})| = \frac{n(n-1)}{2} = |E(G)| + |E(\bar{G})|$. \\
+Pour qu'à la fois $G$ et $\bar{G}$ soient planaires, il faut que 
+\[ \begin{array}{rcl}
+ \frac{n(n-1)}{2} &\leq& 2 (3n - 6) \\
+  n(n-1) &\leq& 4(3n - 6) \\
+  n^2 - 13n + 24 \leq 0 \\
+ \end{array} \]
+ 
+ En résolvant l'équation du deuxième degré, on obtient les racines $10.7720$ et $2.2280$, ce qui signifie que pour que les deux graphes $G$ et $\bar{G}$ soient planaires, il faut que $2.2280 \leq n \leq 10.7720$.
+
+\paragraph{6. }Sous quelle condition est-il possible d'ajouter une arête à un graphe planaire en conservant la planarité? Déduisez-en le nombre total d'arêtes qu'il est possible d'ajouter à un graphe planaire de $n$ sommets et $m$ arêtes tout en conservant la planarité.\\
+
+\textit{Solution}\\
+
+Le nombre maximal d'arêtes que l'on peut mettre dans un graphe planaire est $e = 3n - 6$ Soit $x$ le nombre d'arête que l'on peut ajouter à un graphe de $m$ arêtes tout en conversant la planarité. On a donc $e = m + x$, ce qui donne $x = 3n - 6 - m$. Notons que la formule d'Euler ($ n - e + f = 2$) nous dit que $x$ est aussi le nombre maximum de faces que l'on peut ajouter au graphe planaire de $n$ sommets et $m$ arêtes. 
+
+
+\paragraph{7. }Soit un graphe $G$ 3-régulier tel que tout sommet est incident à une face de degré 4, une face de degré 6 et une face de degré 8. Sans dessiner $G$, déterminez le nombre de faces de $G$.\\
+
+\textit{Solution}\\
+
+Un noeud ne peut être incident qu'à une seule face de degré 4, une seule face de degré 6 et une seule face de degré 8. Si on désigne
+\begin{itemize}
+\item $f_4$ le nombre de faces de degré 4,
+\item $f_6$ le nombre de faces de degré 6, et
+\item $f_8$ le nombre de faces de degré 8;
+\end{itemize}
+on peut donc dire que $n = 4f_4 = 6f_6 = 8f_8$, et donc : 
+\[  
+\begin{array}{rcl}
+f &=& f_4 + f_6 + f_8 \\
+  &=& \frac{n}{4} + \frac{n}{6} + \frac{n}{8} \\
+  &=& \frac{6 + 4 + 3}{24} n \\
+  &=& \frac{13}{24} n 
+\end{array}
+\]
+
+Sachant que $e = \frac{3n}{2}$, on a, par la formule d'Euler, $$ n - \frac{3n}{2} + \frac{13}{24} n = 2 $$
+On trouve donc que $$ n = 48 \qquad e = 72 \qquad f = 26$$
+$$ f_4 = 12 \qquad f_6 = 8 \qquad f_8 = 6$$
 
 \paragraph{8. }Montrez que si tous les sommets d'un graphe planaire $G$ sont de degré pair, alors toutes les faces de $G$ peuvent être coloriées en deux couleurs de telle sorte que deux faces adjacentes n'aient jamais la même couleur. 
 
+\nosolution
+
 \paragraph{9. }Un circuit électrique connecte des terminaux de deux types $A$ et $B$. Chaque terminal de $A$ est connecté à chaque terminal de $B$. Il y a 6 terminaux $A$ et 5 terminaux $B$. Montrez qu'un tel circuit peut être imprimé sur les deux faces d'une seule feuille isolante si les terminaux traversent la feuille.
+
+\nosolution
